--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="home">
     <div class="menu-toggle" onclick="toggleMenu()">
-      <span>Zwischenräume<br>Übergänge</span>
+       <span><b>Zwischenräume</b></span><br><span>Übergänge</span>
     </div>
 
 <div id="fullscreenMenu" class="hidden">
