--- a/projekte/HumanNature.html
+++ b/projekte/HumanNature.html
@@ -9,4 +9,64 @@
         <h1>HUMAN NATURE – the nature of being human</h1>
         <p class="autor">von Svenja Mezynski, Lilli F. Wieth</p>
 
+        <p>Was ist die menschliche Natur? Was bedeutet sie für uns und was können wir von ihr lernen? <br>
+
+        Das sind alles Fragen, mit denen wir uns im Rahmen unseres Projektes auseinandergesetzt haben.</p>
+
+        <p>Die Thematik der menschlichen Natur ist ein sehr breit gefächertes Themengebiet, mit vielen verschiedenen 
+          und vor allem viele unterschiedlichen Definitionen und Ansichten. Aber trotz dessen, haben alle gemeinsam, dass 
+          jeder Autor ebene genau diese menschliche Natur in sich trägt, von ihr geleitet wird und sein Handeln von ihr bestimmt wird. 
+          Eine Gemeinsamkeit, die uns trotz unserer unterschiedlichen Standpunkte verbindet und die es wichtig macht, dass 
+          wir uns mit ihr auseinandersetzen, uns weiterbilden und uns darüber im Klaren werden, was für einen Einfluss sie auf unser Leben hat.</p>
+
+        <p>Deswegen haben wir uns genau diese Eigenschaft zu Nutze gemacht und uns zum Ziel gesetzt, einen Weg herauszuarbeiten, der einen gemeinsamen
+           Austausch ermöglicht. Unverfälscht von Vorurteilen und losgelöst von den sozialen Blasen, die unseren Alltag prägen und beeinflussen.
+            Denn, obwohl uns diese Gemeinsamkeit verbindet, unterscheidet sie uns auch, da die menschliche Natur bei jeder Person anders ausgeprägt 
+            ist. Wo bei dem einen ein Wunsch nach Fairness und Solidarität entstanden ist, entwickelte sich bei dem anderen
+           Egoismus. Grundliegende Eigenschaften, die das gesamte Handeln der jeweiligen Person beeinflussen.</p>
+
+        <p>Der eine hat das Bedürfnis die Natur zu schützen und von ihr zu lernen, weil wir ein Teil von ihr sind und der andere sieht in dem gleichen 
+          Grund eine Legitimation die Natur auszubeuten und so von ihr zu profitieren. Unsere Natur beeinflusst also unseren Umgang mit unserem Umfeld, den
+           Menschen, mit denen wir interagieren, den Raum, in dem wir leben und somit auch die Natur. Ein Raum zwischen dem Menschen und seiner Umgebung, ein physischer 
+           als auch Emotionaler/ Sozialer Raum.</p>
+        <p>Haben wir die Möglichkeit der Veränderung beziehungsweise Entwicklung und wenn ja, was hat das für Folgen im Bezug auf unsere Verantwortung gegenüber
+           eben diesem Raum? Erste Gedanken, die auch der Beginn unserer Reise der Recherche sein sollten, aus der der thematische Rahmen für unser Projekt entstanden ist.</p>
+
+        <div class="plakate">
+        <img src="../images/projekte/human nature/plakate_digitale version.png" alt="Plakate" class="clickable intro-img">
+        </div>
+
+        <p>Die erarbeiteten Inhalte haben wir auf einem Plakat gesammelt, welches die Funktion erfüllt, für außenstehende eine kurze inhaltliche Vorbereitung 
+          bzw. einen Einstieg in die Thematik zu bieten. Das soll eine gemeinsame Diskussionsgrundlage ebnen. So können Personen mit Vorkenntnissen in der Thematik gleichermaßen 
+          mitreden, wie Menschen, die sich noch nie mit dem Thema befasst haben.</p>
+
+        <p>Neben dem Hauptplakat sind noch drei weitere Plakate entstanden, welche Fragen präsentieren, die auf Grundlage der erlangten Informationen bearbeitet werden können.
+           Wichtig hierbei war uns, dass wir die Fragen so gestellt haben, dass unterschiedliche Sozialisation möglichst unterschiedliche Ergebnisse erbringen können.
+          Zusätzlich wollten wir ermöglichen, dass nicht nur Antworten auf die Fragen gegeben werden, sondern auch Gegenfragen gestellt werden können. 
+          Zu einem guten Austausch gehört ständiges Hinterfragen der Inhalte. Ein Austausch endet meist nicht nach dem Beantworten der Ausgangsfrage, daraus ergibt 
+          sich die zweite Interaktionsmöglichkeit mit den Plakaten: Die Reaktion auf gegebene Antworten/ Folgefragen.
+          Teilnehmende sind ermutigt mit Thesen oder Fragen, von völlig Fremden, zu interagieren. Es kommen also "Gespräche" zustande, die sich sonst nicht ergeben 
+          hätten und die komplett unabhängig von Vorurteilen gegenüber dem Gesprächspartner, Zeitpunkt der Interaktion und auch dem Ort, an dem sie stattfindet.
+           Hierdurch ergeben sich diversere Ergebnisse, die in einem Gespräch mit Freunde nicht entstanden wären. Es werden neue Sichtweisen ermöglicht und vielfältige 
+           Standpunkte beleuchtet, die nachhaltig zum Nachdenken anregen.</p>
+
+          <div class="image-grid">
+          <img src="/images/projekte/human nature/design_final, dark version.png" alt="Stempel" class="clickable">
+          <img src="/images/projekte/human nature/design_final, light version blue background.png" alt="light version" class="clickable">
+          <img src="/images/projekte/human nature/design_final, light version green text.png" alt="green version" class="clickable">
+          <img src="/images/projekte/human nature/Stempel_3.jpg" alt="Postkarte 4" class="clickable">
+          <img src="/images/projekte/human nature/druck beutel_1.jpg" alt="Postkarte 5" class="clickable">
+          <img src="/images/projekte/human nature/druck t shirt.jpg" alt="Postkarte 6" class="clickable">
+        </div>
+
+          <p>Neben diesem direkten Versuch einen Dialog anzuregen, haben wir ein Design entworfen, welches den Konflikt zwischen Menschen und Natur repräsentiert 
+            und schriftlich, durch im Bild verteilte Thesen, aufgreift.</p>
+
+          <p> Wo die Plakatreihe auf direktem Weg den Diskurs anregt, macht dass das Design auf unterschwellige Art und Weise. Was auf den ersten Blick,
+             wie ein einfaches Bild aussieht, ist bei genauerem Hinschauen gespickt mit einer vielschichtigen Aussage. Unser Ziel ist es diese Botschaften mit in den 
+             Alltag zu bringen und den Betrachter zum Nachdenken anzuregen. Deswegen haben wir uns dazu entschieden, dass Design mithilfe einer selbst präparierten
+            Linolplatte auf Jutebeutel zu drucken.</p>
+
+          <p>.</p>
+
 </main>
