--- a/projekte/mareesImprimees.html
+++ b/projekte/mareesImprimees.html
@@ -1,3 +1,7 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+
 <div class="kreis-duo">
   <span class="tier-name left">napfschnecke</span>
   <img class="kreis-img" src="images/meerestiere/napfschnecke.png" alt="napfschnecke">
@@ -9,4 +13,84 @@
         <h1>Marées Imprimées - entre rivage et corps</h1>
         <p class="autor">von Melanie Cieslinski</p>
 
+        <p>Das Projekt beginnt an der bretonischen Küste, einem Ort, der durch seinen rhythmischen Wechsel von Ebbe und Flut geprägt ist.
+           Die besondere Atmosphäre des Meeres – der Übergang zwischen to-senden Wellen und stillen Momenten, die meditative Qualität der Gezeiten – bildet den
+            konzeptionellen Ausgangspunkt der Arbeit.</p>
+
+        <p>In der ersten Projektphase wurden die charakteristischen Oberflächenstrukturen der Küstenlandschaft durch verschiedene analoge Techniken dokumentiert:</p>
+        <p>- Direkte Abformungen der Steinstrukturen mittels Ton, die die feinen Details und Texturen konservieren
+
+        <br>- Zeichnerische Dokumentation der Formationen durch Papier und Stift, die zusätzliche Perspektiven auf die Strukturen ermöglicht
+
+        <br>- Fotografische Erfassung von Veränderungen in der Landschaft</p>
+
+          <div class="image-row">
+            <img src="/images/projekte/marees/prozess_07_highres.jpg" alt="Bild 1" class="clickable">
+            <img src="/images/projekte/marees/prozess_08_highres.jpg" alt="Bild 2" class="clickable">
+            <img src="/images/projekte/marees/prozess_14_highres.jpg" alt="Bild 3" class="clickable">
+          </div>
+
+        <p>Die entstandenen dreidimensionalen Tonabdrücke wurden anschließend digitalisiert. Durch 3D-Scanning erfolgte die Übertragung der organischen
+           Formen in den digitalen Raum, wo sie weiter bearbeitet und transformiert wurden.</p>
+
+        <p>Das Resultat sind tragbare Objekte, die als persönliche Verbindung zum Meer fungieren. Sie übersetzen die beruhigende Präsenz des Meeres – seine 
+          Beständigkeit, seinen Rhythmus und seine zeitlose Kraft – in portable Form. Die Objekte ermöglichen es, ein Stück der meditativen Qualität des Meeres 
+          im Alltag bei sich zu tragen. Sie werden zu Ankern der Erinnerung an Momente der Ruhe und Kontemplation, an das Spiel zwischen kraftvollen Wellen 
+          und stillen Wasserspiegeln.</p>
+
+        <p>Diese Transformation von Naturerfahrung in tragbare Objekte schafft eine intime Verbindung zwischen Körper und maritimem Raum. 
+          Die Träger*innen können sich durch die haptische Präsenz der Objekte jederzeit mit der beruhigenden Kraft des Meeres verbinden – ein portables 
+          Stück Küstenlandschaft, das die mentale Regeneration des Meeresaufenthalts in den Alltag überträgt.</p>
+<!--
+        <div class="swiper mySwiper">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide">
+      <img src="/images/projekte/marees/mcieslinski_mareesimprimees_final_01_small.jpg" alt="Bild 4">
+    </div>
+    <div class="swiper-slide">
+      <img src="/images/projekte/marees/mcieslinski_mareesimprimees_final_02_small.jpg" alt="Bild 5">
+    </div>
+    <div class="swiper-slide">
+      <img src="/images/projekte/marees/mcieslinski_mareesimprimees_final_03_small.jpg" alt="Bild 6">
+    </div>
+    <div class="swiper-slide">
+      <img src="/images/projekte/marees/mcieslinski_mareesimprimees_final_04_small.jpg" alt="Bild 7">
+    </div>
+    <div class="swiper-slide">
+      <img src="/images/projekte/marees/mcieslinski_mareesimprimees_final_05_small.jpg" alt="Bild 8">
+    </div>
+    <div class="swiper-slide">
+      <img src="/images/projekte/marees/mcieslinski_mareesimprimees_final_06_small.jpg" alt="Bild 9">
+    </div>
+    <div class="swiper-slide">
+      <img src="/images/projekte/marees/mcieslinski_mareesimprimees_final_07_small.jpg" alt="Bild 10">
+    </div>
+  </div>
+
+  <div class="swiper-button-next"></div>
+  <div class="swiper-button-prev"></div>
+  <div class="swiper-pagination"></div>
+</div>
+-->
+
+
+        <p>.</p>
+
+
 </main>
+<!--
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const swiper = new Swiper(".mySwiper", {
+      loop: true,
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev"
+      },
+      pagination: {
+        el: ".swiper-pagination"
+      }
+    });
+  });
+</script>
+-->
