--- a/projekte/tiefblau.html
+++ b/projekte/tiefblau.html
@@ -9,4 +9,24 @@
         <h1>Tiefblau</h1>
         <p class="autor">von Steffen Herweg</p>
 
+        <div class="video-container">
+          <video controls autoplay muted>
+          <source src="/images/projekte/Tiefblau/Tiefblau.mp4" type="video/mp4">
+          Dein Browser unterstützt das Video-Tag nicht.
+          </video>
+        </div>
+
+      <p>Das Projekt Tiefblau ist eine visuelle Animation, die mit Blender und 
+DaVinci Resolve realisiert wurde. Es zeigt den Übergang von der 
+Wasseroberfläche in eine surreale Unterwasserwelt. Ziel war es, eine 
+Zwischenwelt zu erschaffen, in der außergewöhnliche Fische, Tiere 
+und Pflanzen existieren, die beim erneuten Auftauchen aus dem Wasser wieder verschwinden. Unnatürliche Effekte und gezielte Video Nachbearbeitung sowie die Reduzierung der Farben der Wesen verstärken diesen Eindruck und lassen die Grenze zwischen Realität und 
+Fantasie verschwimmen. Zusätzlich trägt das Sounddesign zur atmosphärischen Wirkung bei. Die Szenerie wurde der Küste der Bretagne
+nachempfunden, für die reale Fotoaufnahmen von einer Exkursion als 
+visuelle Vorlage verwendet wurden. Die gesamten 3D-Modelle und 
+Animationen wurden in Blender erstellt und gerendert und anschließend in DaVinci Resolve editiert, um Farbe, Effekte und Stimmung zu 
+verstärken. Tiefblau soll den kurzen Einblick in den Übergang zu einer 
+unbekannten Zwischenwelt ermöglich und zum Begleiten einladen.</p>
+
+<p>.</p>
 </main>
