--- a/projekte/menhirküre.html
+++ b/projekte/menhirküre.html
@@ -5,8 +5,60 @@
   <span class="tier-name right">rochen</span>
 </div>
 
-<main class="page-content">
+<main class="page-content projekt-menhirkure">
         <h1>Menhirküre</h1>
         <p class="autor">von Bent Hillerkus</p>
 
+        <p>Inspiration waren für mich die Strand- und Gezeitenlandschaften in der Bretagne, die ich dreidimensional umsetzen wollte. 
+          Als Medium habe ich mich für eine Spiel-Demo mit leichter Interaktion entschieden.</p>
+
+        <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="/images/projekte/menhirküre/bretagne 1.png" class="clickable" alt="Bild 4">
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/menhirküre/bretagne 2.png" class="clickable"  alt="Bild 5">
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/menhirküre/bretagne 3.png" class="clickable" alt="Bild 6">
+          </div>
+
+          <div class="swiper-slide">
+            <img src="/images/projekte/menhirküre/bretagne 4.png" class="clickable" alt="Bild 8">
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/menhirküre/bretagne 5.png" class="clickable" alt="Bild 9">
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/menhirküre/bretagne 6.png" class="clickable" alt="Bild 1">
+          </div>
+        </div>
+
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+      </div>
+
+        <p>Die konzeptuelle Idee war zunächst, das übergeordnete Thema Übergänge/Zwischenräume als die Zeit zwischen Geburt und Tod darzustellen. 
+          Die steigende Flut symbolisiert den unaufhaltsamen Lauf der Zeit. Es scheint, als ob die einzige Handlungsoption darin bestünde, Menhire 
+          aufzutürmen, um sich in einem Hügelgrab zu verewigen. Der Spielerin werden hierbei Captchas als Hindernisse in den Weg gesetzt. 
+          Diese sind einerseits banal und keine echte Herausforderung, sorgen jedoch für ein Frustrationsmoment und verstärken den Zeitdruck.</p>
+
+        <p>Wenn die Spielerin „optimal“ spielt, rennt sie von einem Captcha zum nächsten und wirft die Steine schnell übereinander.
+          Aber es gibt keine win condition -  kein erreichbares Ziel.</p>
+
+        <p>Das Steine-Stapeln ist eine Sisyphosaufgabe. Und wie nach Camus' bekanntem Einwand, dass man sich Sisyphos als einen 
+          glücklichen Menschen vorstellen solle, ermutigt das Spiel einen eigentlich dazu, sich nicht zu sehr zu engagieren, sondern
+           den Strand anzuschauen, im Wasser zu planschen oder mit den Steinen nach den Möwen zu werfen.</p>
+
+        <p>Die Motive auf den Captchas sind einige der Kameraaufnahmen, die ich während der Exkursion gemacht habe. Die Auswahl
+           ist komplett willkürlich, und die Fragestellung (häufig einfach nach Zwischenräumen) ist bewusst uninteressant, da ich die
+            übergeordnete Aussage nicht untergraben wollte.</p>
+
+        <p>Die Menhir-Steine sind bunt. Zunächst hatte ich sie in einem ähnlichen flachen bzw. realistischen Stil wie den Rest gehalten, musste
+           dann aber an die römischen Statuen denken, die ja allesamt bemalt waren und stellte mir vor, dass wohl auch die Steinzeitmenschen ihre Ruhestätten 
+           farbig gestaltet hätten. Ich hatte ursprünglich geplant, der Spielerin eine Graffitidose in die Hand zu geben, damit sie selbst in der Lage ist, die
+            Steine zu taggen - dies erwies sich jedoch als technisch schwer umsetzbar.</p>
+        
+        <p>.</p>
 </main>
