--- a/projekte/stayhere.html
+++ b/projekte/stayhere.html
@@ -6,7 +6,32 @@
 </div>
 
 <main class="page-content">
-        <h1>STAY HERE</h1>
-        <p class="autor">von Amelie Schepping</p>
+    <h1>STAY HERE</h1>
+    <p class="autor">von Amelie Schepping</p>
+
+    <div class="video-container">
+          <video controls autoplay muted>
+          <source src="/images/projekte/stayhere/STAYHERE.m4a" type="video/mp4">
+          Dein Browser unterstützt das Video-Tag nicht.
+          </video>
+
+    <p>Im Rahmen der zehntägigen interdisziplinären Exkursion in die Bretagne zum Thema „Zwischenräume und Übergänge“ entstand 
+      das Musikprojekt „STAY HERE“. Der selbstproduzierte Song verarbeitet persönliche Eindrücke und Erfahrungen, insbesondere 
+      in Bezug auf das Thema räumliche Distanz und emotionale Nähe.</p>
+    
+    <p>Ausgangspunkt war das französische Gedicht „Que serais-je sans toi“ von Louis Aragon, das ich während der Reise entdeckt
+       habe. Der Text beschreibt, wie eine andere Person dem Leben Bedeutung verleiht. Im Song greife ich diese Thematik im
+        Kontext der Exkursion auf und übertrage sie auf das Konzept der „Zwischenräume“ – als Glück, das im Dazwischen zweier 
+        Menschen entsteht, sowie als emotionaler und räumlicher Zwischenraum, der spürbar wird, wenn man jemanden vermisst.</p>
+
+    <p>Verarbeitet wurden neben selbst eingespielter Gitarre, Klavier und Gesang auch O-Töne wie Meeresrauschen und Möwen, um die
+       Atmosphäre der Bretagne einzufangen. Zudem habe ich eine gesprochene Lesung des Lieds („Que serais-je sans toi“) in die Musik 
+       integriert. Der Song wurde in der Tonart einer Klangschale komponiert, die ich in einem kleinen Musikladen vor Ort entdeckt 
+       und gekauft habe – ihr Klang bildet also die tonale Grundlage des Stücks. Produziert wurde der Song mit Logic Pro X.</p>
+
+    <p>Zur Dokumentation des kreativen Prozesses entstand außerdem ein „Behind the Song“-Video, das die einzelnen Produktionsschritte
+       zeigt, sowie ein Musikvideo, bestehend aus Aufnahmen, die während der Exkursion entstanden sind.</p>
+
+    <p>.</p>
 
 </main>
