--- a/projekte/TheInBetween.html
+++ b/projekte/TheInBetween.html
@@ -6,7 +6,68 @@
 </div>
 
 <main class="page-content">
-        <h1>The In Between</h1>
-        <p class="autor">von </p>
+    <h1>The In-Between – Where Thoughts Find Words</h1>
+    <p class="autor">von Sara Fiujlaali</p>
+
+    <p>Unsere Wahrnehmung der Welt ist ein ständiger Prozess des Erkennens und Interpretierens. Wir sehen Dinge nicht einfach, sondern tragen bereits Erinnerungen, 
+      kulturelle Prägungen und Glaubenssätze in uns, die bestimmen, wie wir sie deuten. Doch zwischen dem Sehen und Verstehen gibt es einen Zwischenraum – einen 
+      Moment, in dem wir innehalten, hinterfragen und neue Bedeutungen erschaffen können.</p>
+
+
+    <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="/images/projekte/the-in-between/1.jpg" class="clickable" >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/the-in-between/2.jpg" class="clickable"  >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/the-in-between/3.jpg" class="clickable" >
+          </div>
+
+          <div class="swiper-slide">
+            <img src="/images/projekte/the-in-between/4.jpg" class="clickable" >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/the-in-between/5.jpg" class="clickable" >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/the-in-between/6.jpg" class="clickable" >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/the-in-between/7.jpg" class="clickable" >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/the-in-between/8.jpg" class="clickable">
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/the-in-between/9.jpg" class="clickable">
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/the-in-between/10.jpg" class="clickable">
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/the-in-between/11.jpg" class="clickable">
+          </div>
+        </div>
+
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+      </div>
+
+    <p>In meinen Gedichten folge ich diesem inneren Prozess, inspiriert von der Natur der Bretagne. Die Bäume, die Steine, das Meer – sie alle spiegeln unser eigenes Leben
+       wider. Wie in meinem Gedicht Tree finden wir uns selbst, wenn wir Empathie für die Natur entwickeln. Doch manche Fragen bleiben unbeantwortet, wie der Tod. Das Leben
+        biegt und prägt uns, wie die schmalen und dunklen Wege, die wir durchschreiten. Manche Lektionen lehren uns, zusammenzuhalten und im Gleichgewicht zu
+        bleiben, wie die Muscheln, die sich eng aneinanderklammern, um zu überleben. Andere fordern uns heraus, unsere Ängste zu überwinden – sollen wir uns wie die Krabben
+         verstecken oder den Sprung ins Unbekannte wagen?</p>
+
+    <p>Auch unser Inneres trägt Spuren – die Footprints auf unserer Seele. Was sollen wir mit den Eindrücken tun, die andere in uns hinterlassen haben? Können wir sie 
+      bewusst bewahren oder loslassen? Und wie formen Traditionen, Mythen und alte Symbole unser Denken? Die Feige zum Beispiel – heilig, verboten, männlich und 
+      weiblich zugleich – zeigt, wie tief verwurzelte Glaubenssätze unser Verständnis von uns selbst und der Welt beeinflussen.</p>
+
+    <p>Meine Gedichte sind eine Reise durch diese Zwischenräume – eine Reflexion über das, was uns formt, was uns festhält und was uns weiterziehen lässt.</p>
+
+    <p>.</p>
 
 </main>
