--- a/projekte/entre-sentieure.html
+++ b/projekte/entre-sentieure.html
@@ -10,4 +10,80 @@
         <h1>„une entre-sentieure“ - eine intermediale Narration</h1>
         <p class="autor">von Hannah Schmitz</p>
 
+     <div class="video-container">
+          <video controls autoplay muted>
+          <source src="/images/projekte/une_entre_sentieure/Schmitz-Hannah Version2.mp4" type="video/mp4">
+          Dein Browser unterstützt das Video-Tag nicht.
+          </video>
+
+    <p>Der Titel des Projektes „entre-sentieure“ wurde als Wort neu geschöpft. Das Wort setzt sich zusammen
+       aus dem französischen „entre“ (zwischen) und „sentir“ (fühlen), wobei die Endung „-eure“ typisch für französische Substantive
+        ist, die Personen oder eine Gruppe von Personen beschreiben (z.B. „acteur“ für Schauspieler). „Entre-sentieure“ bezeichnet also
+         eine Person oder Gruppe, die sich in einem emotionalen Zwischenraum befindet und zwischen verschiedenen Gefühlen hin- und hergerissen ist.</p>
+
+    <p>Die Exkursion brachte aufgrund der wahrgenommenen Übergänge in der Natur aber auch auf zwischenmenschlicher Ebene diese Emotionen hervor.
+       Vor Ort wurden sowohl Fotos zur Dokumentation des Erlebten gemacht, als auch erste Audioaufnahmen. Ein täglich selbst geschriebenes Gedicht über die
+        Ausflüge vor Ort ermöglichte außerdem erste Schritte der Verarbeitung des Erlebten und diente neben dem
+         gesammelten Material als Grundlage für die weitere Auseinandersetzung mit dem Thema nach der Heimkehr.</p>
+
+     <div class="image-row">
+            <img src="/images/projekte/une_entre_sentieure/Schmitz-Hannah_Gedichte-Exkursion in Worten-page-001.jpg" class="clickable">
+            <img src="/images/projekte/une_entre_sentieure/Schmitz-Hannah_Gedichte-Exkursion in Worten-page-002.jpg" class="clickable">
+          </div>
+
+    <p>Anschließend wurde ein zusammenhängender Text formuliert und die prägnantesten Erinnerungen zusammengetragen. Durch das direkte Verknüpfen
+       der Fotos und Videos mit den Aufnahmen des Textes konnten Zusammenhänge hergestellt und verarbeitet werden. Die Aufnahme als gesprochener Text
+        weckte erneut Emotionen und half daher beim weiteren Reflektieren der Exkursion.</p>
+
+        <div class="image-row">
+            <img src="/images/projekte/une_entre_sentieure/Schmitz-Hannah_Une entre-sentieure-page-001.jpg" class="clickable">
+            <img src="/images/projekte/une_entre_sentieure/Schmitz-Hannah_Une entre-sentieure-page-002.jpg" class="clickable">
+            <img src="/images/projekte/une_entre_sentieure/Schmitz-Hannah_Une entre-sentieure-page-003.jpg" class="clickable">
+          </div>
+
+    <p>Ziel ist es, einen groben Einblick in die Lebensrealität einer Sozialarbeiterin und Studentin zu ermöglichen, welcher zum Schutz der Zuhörenden 
+      lediglich oberflächlich die teils schwierigen Aufgaben benennt. Parallel hatte die Erstellung der Arbeit zum Ziel, die eigenen Wahrnehmungen, 
+      Beobachtungen, Emotionen und Sichtweise in Bezug auf Zwischenräume und Übergänge im zwischenmenschlichen Bereich zu reflektieren und ggf. neu zu sortieren.</p>
+
+    <p>Als Ergebnis entstand nach Einarbeitung des im Kurs erhaltenen Feedbacks eine kurze Videoreihe. Durch die intermediale Narration wird den Zuschauer:innen die Möglichkeit
+       eröffnet, einen Einblick in das innere und äußere Erleben der Autorin zeitgleich zu erhalten. Es entstand ein multimediales Kunstwerk, welches die Grenzen zwischen Literatur,
+        Fotografie und Videokunst verwischt und so neue Zugänge ermöglicht. Die Worte evozieren innere Bilder, die Fotos verstärken oder kontrastieren je nach Wahrnehmung diese
+         Vorstellungen und die Videosequenzen fügen eine zeitliche Dimension hinzu. So wird der Kontrast zwischen innerer Reflexion und äußerer Umgebung visuell erlebbar gemacht.</p>
+    <p>Eine gewisse Diskrepanz von Video und Ton wurde während der Arbeitsphase beobachtet und überwiegend durch Korrekturen reduziert. Dennoch spiegelt die Diskrepanz zwischen visuellem und auditivem
+      auch das Erlebte der Autorin (inneres vs. äußeres) während der Ex-kursion wider.</p>
+
+    <p>Inspiriert wurde die Arbeit durch andere Beispielarbeiten, welche in den Bereichen Journalismus, Kunst, Literatur und Bildung eingesetzt werden. Die intermediale Kombination aus Text und Video wird beispielsweise 
+      auch von Nachrichtenorganisationen und Online-Medien genutzt, um immersive Storytelling-Erlebnisse zu schaffen: Die New York Times veröffentlichte 2012 eine multimediale Story mit dem Titel „snow fall“.
+       Es erzählt die Geschichte einer Lawine am Tunnel Creek und verbindet nahtlos Text mit Audio, Video, 3D-Grafiken und interaktiven Elementen.</p>
+
+    <p>Der österreichische Fotograf Josef Hoflehner ist bekannt für seine minimalistischen Landschaftsaufnahmen, die oft einsame Strände und dramatische Himmel zeigen. Seine Bilder strahlen eine Stimmung von 
+      Ruhe und Einsamkeit aus. Eine vergleichbare Stimmung sollte durch die im Video verwendeten Aufnahmen transportiert werden, weshalb die Farbgebung teils angepasst wurde und eine möglichst minimalistische 
+      Komposition ausgewählt wurde. Eine ruhige und kontemplative Stimmung sollte so, passende zum aufgenommenen Text, erzeugt werden.</p>
+
+    <p>Im Rahmen der Recherche konnten außerdem verschiedene sozialwissenschaftliche Theorien herausgefiltert werden, welche von Relevanz für die Betrachtung der intermedialen Narration sind. <br>
+
+Proshansky et al. entwickelten das Konzept der Ortsidentität, das beschreibt, wie physische Umgebungen zur Selbstidentität beitragen (Proshansky et al., 1983). Die detaillierten Beschreibungen der bretonischen Landschaft
+ im Text und deren Einfluss auf die Protagonistin spiegeln sich hier wider. Korpela argumentierte, dass Ortsidentität eine selbstregulierende Funktion hat (Korpela, 1989). Dies zeigt sich im Text, wenn die Protagonistin verschiedene
+  Orte nutzt, um über sich selbst nachzudenken und ihr Selbstkonzept zu hinterfragen. <br> Die Bedeutung der Selbstreflexion an Übergangspunkten, wie von Lairio et al. diskutiert (Lairio et al., 2011), ist in der Situation 
+  der Protagonistin erkennbar, die einen Übergang zwischen ihrer beruflichen und persönlichen Identität erlebt.</p>
+
+      <p>Konzeptionell wurden die Überlegungen wie folgt umgesetzt: Der Text ist in sechs Abschnitte gegliedert, die jeweils einen bestimmten Ort oder eine Erfahrung fokussieren. Die Protagonistin ist eine Sozialarbeiterin, die zwischen
+         ihrer beruflichen Identität und ihrem persönlichen Selbst navigiert. Ihre Reise durch die Bretagne dient als Metapher für ihre innere Entdeckungsreise. Zentrale Motive sind die Übergänge, ihre Identität und die Natur. 
+         Der Text exploriert verschiedene Übergänge - zwischen Arbeit und Freizeit, Land und Meer, Vergangenheit und Gegenwart. Die Protagonistin hinterfragt ihre Identität und die Rollen, die sie in ihrem Leben einnimmt und die bretonische
+          Landschaft dient als Spiegel für ihre inneren Zustände. Schauplätze sind dabei Brignon Plage als Symbol für den ersten Schritt in eine neue Erfahrung, das Site de Meneham, welches zur Reflexion über Zeit und Vergänglichkeit 
+          anregt, Pont Aven und das Cap de la Chèvre, wo eine körperliche Grenze wahrgenommen werden konnte.</p>
+
+      <p>Die Prosa ist mit poetischen Elementen verbunden und der innere Monolog diente als Selbstreflexion. Die Verwendung von Naturmetaphern zur Darstellung innerer Zustände zeichnet neben dem Wechsel zwischen konkreten 
+        Beschreibungen und abstrakten Gedanken ein weiteres stilistisches Merkmal des Textes aus.<br>
+      Der Text beginnt mit der Beschreibung der Arbeit der Protagonistin als Sozialarbeiterin. Die Reise in die Bretagne markiert einen Bruch mit dem Alltag. An jedem Ort setzt sich die Protagonistin mit einem anderen
+       Aspekt ihrer Identität auseinander. Im letzten Abschnitt erkennt die Hauptfigur die Vielschichtigkeit ihrer Identität an.</p>
+
+       <p>Insgesamt ist "une entre-sentieure" ist ein komplexer Text, der die Suche nach Identität und Selbstverständnis in einer Welt der Übergänge thematisiert. Durch die Verbindung von äußerer Reise und innerer Entwicklung
+         schafft die intermediale Narration ein vielschichtiges Porträt einer Frau, die versucht, die verschiedenen Aspekte ihres Lebens zu integrieren.</p>
+      <p>Die Sozialarbeit befindet sich in einem ständigen Wandel, der durch gesellschaftliche Veränderungen und neue Herausforderungen vorangetrieben wird.
+         Sozialarbeiter:innen müssen sich daher kontinuierlich an neue Rollen und Aufgaben anpassen. So befinden sie sich oft in Übergängen ihrer eigenen beruflichen Identität, was die Relevanz 
+         des Themas auf persönlicher Ebene verdeutlicht. In einer Zeit zunehmender sozialer Herausforderungen wird auch die gesellschaftliche Relevanz der inhaltlichen 
+         Auseinandersetzung schnell klar. Die Narration eröffnet Einblicke in das innere Erleben einer Sozialarbeiterin und könnte so Transparenz schaffen und das Berufsbild bei den
+          Zuschauer:innen an Wertschätzung gewinnen.</p>
+         <p>.</p>
 </main>
