--- a/projekte/menhirküre.html
+++ b/projekte/menhirküre.html
@@ -33,6 +33,12 @@
           <div class="swiper-slide">
             <img src="/images/projekte/menhirküre/bretagne 6.png" class="clickable" alt="Bild 1">
           </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/menhirküre/gaea.png" class="clickable">
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/menhirküre/main.tscn - bretagne - Godot Engine 11.05.2025 16_49_30.png" class="clickable">
+          </div>
         </div>
 
         <div class="swiper-button-next"></div>
