--- a/projekte/stayhere.html
+++ b/projekte/stayhere.html
@@ -11,7 +11,7 @@
 
     <div class="video-container">
           <video controls autoplay muted>
-          <source src="/images/projekte/stayhere/STAYHERE.m4a" type="video/mp4">
+          <source src="/images/projekte/stayhere/STAYHERE.mp4" type="video/mp4">
           Dein Browser unterstützt das Video-Tag nicht.
           </video>
 
@@ -31,6 +31,12 @@
 
     <p>Zur Dokumentation des kreativen Prozesses entstand außerdem ein „Behind the Song“-Video, das die einzelnen Produktionsschritte
        zeigt, sowie ein Musikvideo, bestehend aus Aufnahmen, die während der Exkursion entstanden sind.</p>
+
+       <div class="video-container">
+          <video controls muted>
+          <source src="/images/projekte/stayhere/bts.mp4" type="video/mp4">
+          Dein Browser unterstützt das Video-Tag nicht.
+          </video>
 
     <p>.</p>
 
