--- a/projekte/thelake.html
+++ b/projekte/thelake.html
@@ -8,4 +8,69 @@
 <main class="page-content">
         <h1>the lake</h1>
         <p class="autor">von Alina Funke</p>
+
+    <div class="video-container">
+          <video controls autoplay muted>
+          <source src="/images/projekte/lake/the lake final.mp4" type="video/mp4">
+          Dein Browser unterstützt das Video-Tag nicht.
+          </video>
+
+    <p>Unsere Wahrnehmung der Welt ist ein ständiger Prozess des Erkennens und Interpretierens. 
+      Wir sehen Dinge nicht einfach, sondern tragen bereits Erinnerungen, 
+      kulturelle Prägungen und Glaubenssätze in uns, die bestimmen, wie wir sie deuten. 
+      Doch zwischen dem Sehen und Verstehen gibt es einen Zwischenraum – einen 
+      Moment, in dem wir innehalten, hinterfragen und neue Bedeutungen erschaffen können.</p>
+
+    <p>Normalerweise gibt es in einer typischen, monogamen Beziehung 
+      eine Kennlernphase, welche dann schließlich übergeht in eine feste 
+      Beziehung, die auch von beiden Personen als eine solche definiert 
+      wird. Wenn aber diese klare Definition ausbleibt verharrt man in einer 
+      Zwischenphase in der man weder allein noch zu zweit ist und irgendwie doch beides
+      gleichzeitig. Eine solche Situation kann Unbehagen 
+      und Unsicherheiten auslösen und bietet trotz dieser negativen Aspekte einen 
+      ganz besonderen Zwischenraum. Ein Raum zur Selbstentwicklung. Denn ich verlasse
+      mich nicht auf einen Partner, lerne mir selbst die nächste Person zu sein und lerne 
+      auch gleichzeitig unabhängig von gängigem Schubladendenken ganz eigene Lebensweisen 
+      zu schätzen und den Moment in ganz neuer Intensität zu genießen. </p>
+
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="/images/projekte/lake/the lake_a poem-page-001.jpg" class="clickable" >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/lake/notizen/SW notes-1.jpg" class="clickable"  >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/lake/notizen/SW notes-11.jpg" class="clickable" >
+          </div>
+
+          <div class="swiper-slide">
+            <img src="/images/projekte/lake/notizen/SW notes-13.jpg" class="clickable" >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/lake/notizen/SW notes-15.jpg" class="clickable" >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/lake/notizen/SW notes-16.jpg" class="clickable" >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/lake/notizen/SW notes-17.jpg" class="clickable" >
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/lake/notizen/SW notes-3.jpg" class="clickable">
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/lake/notizen/SW notes-5.jpg" class="clickable">
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/projekte/lake/notizen/SW notes-8.jpg" class="clickable">
+          </div>
+        </div>
+
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+      </div>
+
+    <p>.</p>
 </main>
